2014-10-30

	* src/mainwindow.c
	  src/gtkutils.c: win32: fixed 'Minimize to tray icon' option not
	  working on Windows.

2014-10-30

	* src/gtkutils.[ch]
	  src/main.c: added gtkut_get_dpi().

2014-09-22

	* libsylph/recv.c: recv_bytes_write(): fixed a bug that wrote the
	  first part of data if it didn't end with CR+LF (thanks to Yohei Endo
	  for pointing it out). This bug affected IMAP4 (Bug #84).

2014-06-13

	* version 3.5.0beta1

2014-06-11

	* libsylph/socket.c: sock_info_connect_by_getaddrinfo():
	  win32: fixed crash on network failure.

2014-06-10

	* libsylph/mbox.c
	  src/inc.c
	  configure.ac: made mbox locking NFS-safe (#202).

2014-06-05

	* libsylph/filter.c: filter_match_cond(): fixed crash on 32-bit OS
	  with 64-bit time_t.

2014-04-25

	* makewin32.sh: added -static-libgcc option to prevent the dependency
	  to libgcc_s_dw2-1.dll.

2014-04-25

	* src/notificationwindow.c: set opacity on mouse over.

2014-04-24

	* sylpheed.desktop: applied Debian patch: 09_desktop_file_fixes.diff
	  (#194).

2014-04-24

	* src/notificationwindow.c: added fade effect (requires GTK+ >= 2.12).

2014-04-23

	* src/main.c: fix_font_setting(): modified OS X font name.

2014-04-23

	* src/rpop3.c: additional fix for Bug #193.

2014-04-22

	* src/main.c: fix_font_setting(): improved font name fixing.

2014-04-22

	* makewin32.sh: save build log.

2014-04-21

	* configure.ac: renamed from configure.in.

2014-04-21

	* src/passphrase.c
	  configure.in: gpgme: use gpgme_io_writen() if available
	  (fixes freeze when entering passphrase on Windows).

2014-04-18

	* libsylph/utils.c
	  libsylph/procheader.c
	  libsylph/pop.c
	  libsylph/mbox.c
	  libsylph/imap.c
	  plugin/attachment_tool/attachment_tool.c: workaround for 64-bit
	  time_t on win32.

2014-04-18

	* makewin32.sh: added -mthreads gcc option.

2014-04-18

	* libsylph/utils.[ch]
	  libsylph/mh.c
	  libsylph/procheader.c
	  libsylph/socket.c
	  src/addrcache.c
	  src/compose.c
	  src/template.c
	  src/addrbook.c