@@ -3264,10 +3264,16 @@ static gboolean main_window_window_state_cb(GtkWidget *widget,
 		}
 	}
 
+#ifdef G_OS_WIN32
 	if (minimized &&
 	    prefs_common.show_trayicon && prefs_common.minimize_to_tray) {
 		gtk_window_set_skip_taskbar_hint(GTK_WINDOW(widget), TRUE);
 		gtk_widget_hide(widget);
+#else
+	if (mainwin->window_hidden &&
+	    prefs_common.show_trayicon && prefs_common.minimize_to_tray) {
+		gtk_window_set_skip_taskbar_hint(GTK_WINDOW(widget), TRUE);
+#endif
 	} else if (!mainwin->window_hidden) {
 		gtk_window_set_skip_taskbar_hint(GTK_WINDOW(widget), FALSE);
 	}
