@@ -1,3 +1,8 @@
+2014-11-05
+
+	* src/mainwindow.c: only apply r3427 to win32 because it breaks
+	  the function on some window managers.
+
 2014-10-30
 
 	* src/mainwindow.c
